--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
+    "canvas-confetti": "^1.9.3"
   },
   "devDependencies": {
     "rollup": "^4.35.0",
